--- a/diversity-lunch-fe/src/user-interface/pages/profile-overview/profile.scss
+++ b/diversity-lunch-fe/src/user-interface/pages/profile-overview/profile.scss
@@ -29,100 +29,3 @@
   justify-content: center;
   align-items: center;
 }
-
-.ProfileForm{
-  .DropdownQuestion{
-    input{
-      background: #ffffff;
-    }
-    input::placeholder{
-
-    }
-  }
-
-  .DropdownQuestion{
-    @media screen and (min-width: $screen-large){
-      display: flex;
-      justify-content: space-between;
-
-      .MuiTextField-root{
-        .MuiInputBase-root{
-          width: 100%;
-        }
-      }
-
-      .inLineToggle{
-        width: 75%;
-        max-width: 21rem;
-        padding-right: 1rem;
-        vertical-align: top;
-      }
-
-      .inLineToggleHelper{
-        float: right;
-        width: 100%;
-        position: relative;
-      }
-
-      .MuiAutocomplete-root.MuiAutocomplete-hasClearIcon.MuiAutocomplete-hasPopupIcon, .MuiFormControl-root{
-        width: 100%;
-        vertical-align: middle;
-        position: relative;
-      }
-    }
-  }
-}
-
-.multiselect-container.multiSelectContainer .searchWrapper {
-  border-radius: 0;
-}
-
-.Multi-select-container {
-  .labelWrapper {
-    background-color: #f0f0f0;
-    padding: .3rem;
-    width: 70%;
-    top: 8px;
-    left: 8px;
-    position: relative;
-    z-index: 999;
-
-    label {
-      font-family: "Roboto", "Helvetica", "Arial", sans-serif;
-      font-weight: 400;
-      line-height: 1;
-      letter-spacing: 0.00938em;
-      color: rgba(0, 0, 0, 0.54);
-      font-size: .8rem;
-    }
-  }
-
-  .chip {
-    align-items: center;
-    background: rgba(0, 0, 0, 0.08);
-    border-radius: 11px;
-    color: black;
-    display: inline-flex;
-    font-size: 13px;
-    line-height: 19px;
-    margin-bottom: 5px;
-    margin-right: 5px;
-    padding: 4px 10px;
-    font-family: SourceSansProRegular, sans-serif;
-  }
-
-  input {
-    background: transparent;
-    border: none;
-    margin-top: 3px;
-    max-height: 42px;
-    color: currentColor;
-    font: inherit;
-  }
-
-  input::placeholder {
-    width: 100%;
-    color:lightgrey;
-    font-size: 16px;
-  }
-}
